crates/hdk/tests/macros/entry_type_registration_bad_vis.stderr
error: EntryVisibility can only be `public` or `private`
 --> tests/macros/entry_type_registration_bad_vis.rs:6:5
  |
6 |     A(A),
  |     ^
